Deployment/shopbia_helm/templates/registry_ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: shopbia
spec:
  rules:
  - host: shop.com
    http:
      paths:
      - path: /registry
        pathType: Prefix
        backend:
          service:
            name: jhipster-registry
            port:
              number: 8761
